--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,14 +5,23 @@
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BudgetBuddy"
-        android:enableOnBackInvokedCallback="true"
         tools:targetApi="31">
+        <activity
+            android:name=".controllers.ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controllers.SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controllers.CategoriesActivity"
+            android:exported="false" />
         <activity
             android:name=".controllers.SignInActivity"
             android:exported="false" />
