implemented drawer menu to the activitys, added new appIcon and splash screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name=".controllers.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".controllers.LoginActivity"
+            android:name=".controllers.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,6 +37,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".controllers.LoginActivity" />
     </application>
 
 </manifest>
