CalendarFragment finished, added a confirmation dialog when trying to delete anithing and ForgotPassActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.BudgetBuddy"
         tools:targetApi="31">
         <activity
+            android:name=".controllers.ForgotPassActivity"
+            android:exported="false" />
+        <activity
             android:name=".controllers.ProfileActivity"
             android:exported="false" />
         <activity
